--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@ body, html {
     position: relative;
     height: 100%;
     margin: 0;
-    scroll-behavior: smooth;
+    scroll-behavior: smooth; /* ie와 safari에서는 지원안함*/
   }
 
 
@@ -122,11 +122,17 @@ nav a {
   border-radius: 0;
 }
 
+.nav-pills .active.nav-link, .nav-pills .show > .nav-link {
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0);
+}
+
 /* intro */
 #main { 
   /* The image used */
-
-  background-image: linear-gradient(#21252900 60%, rgba(0,0,0,5)), url('../images/main.jpg');
+  background-image: linear-gradient(rgba(0,0,0,0) 60%, rgba(0,0,0,5)), url('../images/main.png') ;
+  /* 기존 background-image 코드 */
+  /* background-image: linear-gradient(#21252900 60%, rgba(0,0,0,5)), url('../images/project1.png'); */
   /* background-color: red; */
   /* Full height */
   height: 100%; 
@@ -422,7 +428,7 @@ display: table;
   /* The image used */
   padding-top : 60px;
   padding-bottom : 60px;
-  background-image: linear-gradient(rgba(0,0,0,5),#21252900 60%, rgba(0,0,0,5)), url('../images/contact.jpg');
+  background-image: linear-gradient(rgba(0,0,0,5),rgba(0,0,0,0) 60%, rgba(0,0,0,5)), url('../images/contact.png');
   /* background-color: red; */
   /* Full height */
   /* Center and scale the image nicely */
