--- a/css/main.css
+++ b/css/main.css
@@ -47,36 +47,44 @@
 }
 
 @media (max-width:767px) {
-#my-job {
-  font-size: 35px !important;
-}
+  #my-job {
+    font-size: 35px !important;
+  }
 
-#my-name {
-  font-size: 50px !important;
-}
+  #my-name {
+    font-size: 50px !important;
+  }
 
-#phone-img, #email-img {
-  width:30px !important;
-}
+  #phone-img, #email-img {
+    width:30px !important;
+  }
 
-#phone, #email {
-  font-size: 22px !important;
-}
+  #phone, #email {
+    font-size: 22px !important;
+  }
 
-.title {
-  font-size: 55px !important;
-}
+  .title {
+    font-size: 55px !important;
+  }
 
-.nav-link {
-  padding: .5rem .5rem;
-}
+  .nav-link {
+    padding: .5rem .5rem !important;
+  }
 
-.navbar {
-  padding: .5rem 0;
-}
-.nav-link:hover {
-  padding: .5rem .5rem;
-}
+  .navbar {
+    padding: .5rem 0 !important;
+  }
+  .nav-link:hover {
+    padding: .5rem .5rem !important;
+  }
+  
+  .lang-title {
+    font-size: 20px !important;
+  }
+
+  .skill-part-name {
+    font-size: 30px;
+  }
 }
 
 /* @media(min-width:766px) {
@@ -285,10 +293,10 @@ text-align: center;
 .lang-title {
 display: table-cell;
 vertical-align:middle;
-font-size: 20px;
+font-size: 25px;
 font-family: 'Poiret One', cursive;
 font-weight: 800;
-background-image: linear-gradient(180deg,transparent 65%,#F28B66 0);
+background-image: linear-gradient(180deg,transparent 65%,rgba(242, 139, 102, 0.84) 0);
 }
 
 #skills-view {
@@ -304,7 +312,7 @@ margin-bottom: 50px;
 }
 .skill-part-name {
 text-align: left;
-font-size: 30px;
+font-size: 35px;
 font-weight: 800;
 font-family: 'Poiret One', cursive;
 padding-right: 50px;
@@ -420,6 +428,7 @@ margin-right: 5px;
 margin-left: 5px;
 color: white;
 border: 2px solid white;
+background-color: #F28B66;
 text-decoration: none;
 }
 
