별똥별 애니메이션을 배경으로 이전과 같은 텍스트 화면을 나타내기 위해 수정함
main 의 intro-view 부분이 기기 화면에 맞게 이전처럼 나타낼 수 있도록 함

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,9 @@ height: 100%;
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
+overflow-x: hidden;
+overflow-y: hidden;
+text-align: center;
 }
 
 #my-job {
@@ -202,14 +205,12 @@ font-size: 70px;
 z-index: 1;
 height: 100%;
 width: 100%;
-display: table;
+
 }
 
 
 #intro-view {
-display:table-cell;
-vertical-align:middle;
-text-align: center;
+display:table;
 }
 
 #intro-contents{
