--- a/css/main.css
+++ b/css/main.css
@@ -473,6 +473,17 @@ display: table;
 width: 100%;
 }
 
+.project-img4 {
+
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../images/project4.png');
+  height: 100%; 
+  /* Center and scale the image nicely */
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: table;
+  width: 100%;
+  }
+
 .project-subtitle {
 font-family: 'Do Hyeon', sans-serif;
 font-size : 20px;
