Update: skills 내용 수정 및 <br/>에서 <ul>로 변경

--- a/css/main.css
+++ b/css/main.css
@@ -330,8 +330,9 @@ margin-bottom: 20px;
 
 
 .lang-ability {
-margin-left:20px;
+padding-left:20px;
 font-family: 'NanumBarunGothic', sans-serif;
+list-style: none;
 }
 
 /* project */
