--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,8 @@
   }
 
   .skill-part-name {
-    font-size: 30px;
+    font-size: 30px !important;
+    margin: 0 0 !important;
   }
 }
 
@@ -313,12 +314,11 @@ margin-top: 30px;
 margin-bottom: 50px;
 }
 .skill-part-name {
-text-align: left;
 font-size: 35px;
 font-weight: 800;
 font-family: 'Poiret One', cursive;
-padding-right: 50px;
-padding-left: 50px;
+padding-right: 45px;
+padding-left: 45px;
 padding-top: 20px;
 padding-bottom: 20px;
 border: solid;
