--- a/css/main.css
+++ b/css/main.css
@@ -383,6 +383,14 @@ font-size : 20px;
 display: table;
 margin: 0 auto;
 }
+.project-part-name {
+  display: inline-block;
+  font-family: 'Poiret One', cursive;
+  font-size: 40px;
+  font-weight: 800;
+  vertical-align:middle;
+  background-image: linear-gradient(180deg,transparent 65%,rgba(242, 139, 102, 0.84) 0);
+}
 .card-title:after {
 content: "";
 display: block;
