Add: 각 프로젝트마다 소개 내용 수정하고 진행한 일 및 배운 점 추가

--- a/css/main.css
+++ b/css/main.css
@@ -402,6 +402,12 @@ border-bottom: 3px solid #F28B66;
 .project-contents {
 margin-bottom: 20px;
 }
+
+.project-performance-tasks {
+  clear: both;
+  padding-top: 10px;
+}
+
 .skill-name {
 /* display:block; */
 float:left;
