--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,10 @@
     font-size: 30px !important;
     margin: 0 0 !important;
   }
+
+  #jikpool-project-card-body {
+    padding-top: 1.25rem !important;
+  }
 }
 
 /* @media(min-width:766px) {
@@ -519,6 +523,10 @@ width: 100%;
 font-family: 'Do Hyeon', sans-serif;
 font-size : 20px;
 margin-bottom: 0;
+}
+
+#jikpool-project-card-body {
+  padding-top: 0;
 }
 
 /* contact */
