Set: list-style값을 circle로 수정하여 각 언어 능력 설명 앞에 기호 생성
- 가독성을 위해 기호 추가함.

--- a/css/main.css
+++ b/css/main.css
@@ -347,9 +347,8 @@ margin-bottom: 20px;
 
 
 .lang-ability {
-padding-left:20px;
 font-family: 'NanumBarunGothic', sans-serif;
-list-style: none;
+list-style: circle;
 word-break: keep-all;
 }
 
