Feat: 서울남산EB 폰트 사용을 위해 파일 및 css 설정
- 기획이 완전히 완료되지 않았기 때문에 정확히 어떤 글자가 사용되는지 결정되지 않았음.
- 그래서 서울남산EB 폰트는 추후에 서브셋 폰트 파일로 교체할 예정임.

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -5,3 +5,11 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'SeoulNamsanEB';
+    src: url('../fonts/SeoulNamsanEB.woff2') format('woff2'),
+         url('../fonts/SeoulNamsanEB.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
