--- a/css/main.css
+++ b/css/main.css
@@ -538,6 +538,16 @@ width: 100%;
   display: table;
   width: 100%;
 }
+.project-img6 {
+
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../images/project6.png');
+  height: 100%; 
+  /* Center and scale the image nicely */
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: table;
+  width: 100%;
+}
 
 .project-subtitle {
 font-family: 'Do Hyeon', sans-serif;
